--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "react-dom": "^19.0.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^4.5.2",
+    "dexie": "^4.0.1",
+    "zod": "^3.23.8",
+    "react-hook-form": "^7.49.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
