--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.1",
     "@hookform/resolvers": "^3.9.0",
+    "@types/d3-shape": "^3.1.8",
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.2",
+    "framer-motion": "^12.26.1",
     "lucide-react": "^0.473.0",
     "next": "15.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.0",
     "recharts": "^2.12.7",
+    "tailwind-merge": "^3.4.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
