--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@types/d3-shape": "^3.1.8",
     "@vercel/speed-insights": "^1.2.0",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.2",
@@ -31,6 +32,7 @@
     "zustand": "^4.5.7"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.0",
