--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.0",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^2.12.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^3.23.8",
