--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.6.0",
     "recharts": "^2.12.7",
     "tailwind-merge": "^3.4.0",
+    "use-debounce": "^10.1.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.7"
   },
