--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.473.0",
     "next": "15.0.7",
     "react": "18.3.1",
+    "react-body-highlighter": "^2.0.5",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.6.0",
