--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build && npm run lint:ci",
     "start": "next start",
     "lint": "next lint",
-    "lint:ci": "next lint --max-warnings=0 --format stylish"
+    "lint:ci": "next lint --max-warnings=0 --format stylish",
+    "test": "vitest"
   },
   "dependencies": {
     "@capacitor/android": "^8.0.1",
